--- a/sass/module/_wellejus.openinghours.scss
+++ b/sass/module/_wellejus.openinghours.scss
@@ -82,7 +82,11 @@
     }
     
     .details {
-      line-height: 130%;
+      line-height: 150%;
+      
+      span {
+        vertical-align: middle;
+      }
     }
     
   }
